# unity-native

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yaml
src/: lib.rs
unity/: wrapper.h
unity_native/: Cargo.toml
unity_native/src/: lib.rs  logger.rs  macros.rs  profiler.rs  types.rs
unity_native/src/profiler/: marker.rs  mod.rs  sample.rs
unity_native_proc_macro/: Cargo.toml  README.md
unity_native_proc_macro/src/: lib.rs
unity_native_sys/: Cargo.toml  LICENSE  README.md  build.rs
unity_native_sys/src/: lib.rs
unity_native_sys/unity/: wrapper.h
