[workspace]
resolver = "2"
members = ["unity_native", "unity_native_proc_macro", "unity_native_sys"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
repository = "https://github.com/cloone8/unity-native"
license = "MIT"
keywords = []
categories = []

[workspace.dependencies]
unity_native = { path = "unity_native", version = "0.1.1" }
unity_native_proc_macro = { path = "unity_native_proc_macro", version = "0.1.1" }
unity_native_sys = { path = "unity_native_sys", version = "0.1.1" }
bindgen = "0.69.4"
syn = "2.0.66"
quote = "1.0.36"
thiserror = "1.0.61"
log = "0.4.21"
static_assertions = "1.1.0"
