[workspace]
resolver = "2"
members = ["unity_native", "unity_native_proc_macro", "unity_native_sys"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
repository = "https://github.com/cloone8/unity-native"
license = "MIT"
keywords = []
categories = []

[workspace.dependencies]
unity_native = { path = "unity_native", version = "0.3.0" }
unity_native_proc_macro = { path = "unity_native_proc_macro", version = "0.3.0" }
unity_native_sys = { path = "unity_native_sys", version = "0.3.0" }
bindgen = "0.71"
syn = "2.0"
quote = "1.0"
thiserror = "2.0"
log = "0.4"
static_assertions = "1.1"
mint = "0.5"
